--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Heebo:300,400,700,900|Roboto:300,400,500,700");
 
-  
 body{
   background-image: -moz-linear-gradient(0deg, #766dff 0%, #88f3ff 100%);
   background-image: -webkit-linear-gradient(0deg, #766dff 0%, #88f3ff 100%);
@@ -12,6 +11,7 @@ img {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  border-radius: 50%;
   }
 
 .Konten {
@@ -21,11 +21,10 @@ img {
   border-radius: 20px;
 }
 
-.list {
-  list-style: none;
-  margin: 5px;
-  padding: 0px;
-  }
+hr {
+    width: 100%;
+    border-top:3px solid #4b6fa8;
+    }
 
 .personal_text h6 {
   text-align: center;
@@ -43,29 +42,27 @@ img {
   font-family: "Roboto", sans-serif;
   text-transform: uppercase;
   margin-bottom: 20px;
-  color: #222222; }
+  color: #38393a; }
 .personal_text h3 {
   text-align: center;
   font-size: 48px;
   text-transform: uppercase;
   margin-bottom: 15px;
-  color: #222222; }
+  color: #38393a; }
 .personal_text p {
   font-family: "Roboto", sans-serif;
+  text-align: justify;
+  font-size: 20px;
   max-width: 540px;
+  color: #777777; }
+
+.list {
+  list-style: none;
+  }
+.fa-ul{
   color: #777777;
-  margin-bottom: 40px; }
-.personal_text .basic_info li {
-  margin-bottom: 15px; }
-  .personal_text .basic_info li a {
-    position: relative;
-    padding-left: 40px;
-    font-size: 16px;
-    color: #777777; }
-    .personal_text .basic_info li a i {
-      position: absolute;
-      left: 0px;
-      top: 50%;
-      transform: translateY(-50%);
-      font-size: 20px;
-      color: #766dff; }
+  font-size: 23px;
+}
+.fa-li{
+  color: #766dff;
+}
